DDF-5924 remove persistence type enforcement (#5938)
DDF-5741 update logic add test